# opendev-gui

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROMPT.md  README.md  SETUP_PLAN.md  SETUP_PROMPT.md  deny.toml  index.html  package-lock.json  package.json  rustfmt.toml  tsconfig.json  vite.config.ts
.cargo/: audit.toml
crates/opendev-exec/: Cargo.toml
crates/opendev-exec/src/: backend.rs  bash_ast.rs  bash_security.rs  capability.rs  env_filter.rs  lib.rs  net_filter.rs  patterns.rs  policy.rs  process.rs  sed_validation.rs
crates/opendev-exec/src/backends/: bwrap.rs  landlock.rs  mod.rs  none.rs  seatbelt.rs  windows.rs
crates/opendev-exec/tests/: fail_closed.rs
crates/opendev-hooks/: Cargo.toml
crates/opendev-hooks/src/: executor.rs  executor_tests.rs  lib.rs  manager.rs  manager_tests.rs  models.rs
crates/opendev-hooks/tests/: integration.rs
crates/opendev-http/: Cargo.toml
crates/opendev-http/src/: adapted_client.rs  adapted_client_tests.rs  auth.rs  auth_tests.rs  circuit_breaker.rs  client.rs  client_tests.rs  lib.rs  retry.rs  rotation.rs  streaming.rs  user_store.rs  user_store_tests.rs
crates/opendev-http/src/adapters/: azure.rs  azure_tests.rs  chat_completions_tests.rs  gemini.rs  gemini_tests.rs  groq.rs  groq_tests.rs  mistral.rs  mistral_tests.rs  ollama.rs  ollama_tests.rs  schema_adapter.rs  schema_adapter_tests.rs  tests.rs
crates/opendev-http/src/adapters/anthropic/: mod.rs  request.rs  response.rs  tests.rs
crates/opendev-http/src/adapters/bedrock/: mod.rs  request.rs  response.rs  response_tests.rs  tests.rs
crates/opendev-http/src/adapters/openai/: mod.rs  request.rs  response.rs  tests.rs
crates/opendev-http/src/models/: retry.rs  retry_tests.rs
crates/opendev-mcp/: Cargo.toml
crates/opendev-mcp/src/: auth.rs  config.rs  config_tests.rs  elicitation.rs  error.rs  lib.rs  models.rs  models_tests.rs
crates/opendev-mcp/src/manager/: connection.rs  connection_tests.rs  mod.rs  protocol.rs  protocol_tests.rs  resources.rs  resources_tests.rs  tools.rs  tools_tests.rs
crates/opendev-mcp/src/manager/health/: mod.rs  restart.rs  restart_tests.rs  tests.rs
crates/opendev-mcp/src/transport/: http.rs  inprocess.rs  mod.rs  process.rs  process_tests.rs  sse.rs  stdio.rs  stdio_tests.rs  tests.rs  websocket.rs
crates/opendev-mcp/tests/: integration.rs  transport_test.rs
crates/opendev-memory/: Cargo.toml
crates/opendev-memory/src/: cascade.rs  config.rs  decay.rs  error.rs  facade.rs  lib.rs  migration.rs  provider.rs  repo.rs  short_term.rs  symbol_links.rs  types.rs  write_gate.rs
crates/opendev-memory/src/tests/: mod.rs
crates/opendev-memory/tests/: memory_test.rs
crates/opendev-models/: Cargo.toml
crates/opendev-models/src/: api.rs  api_tests.rs  datetime_compat.rs  file_change_tests.rs  message_tests.rs  session.rs  session_tests.rs  transition_tests.rs  user.rs  validator.rs
crates/opendev-models/src/config/: channels.rs  mod.rs  permissions.rs  permissions_tests.rs  realm.rs  tests.rs
crates/opendev-models/tests/: python_compat.rs  python_session_sample.json
crates/opendev-observability/: Cargo.toml
crates/opendev-observability/src/: config.rs  error.rs  guard.rs  lib.rs
crates/opendev-protocol/: Cargo.toml
crates/opendev-protocol/bindings/: ApprovalListParams.ts  ApprovalListResponse.ts  ApprovalRequest.ts  ApprovalRespondParams.ts  AttachmentInput.ts  ConfigAutonomySetParams.ts  ConfigGetParams.ts  ConfigGetResponse.ts  ConfigModeSetParams.ts  ConfigModelVerifyParams.ts  ConfigModelVerifyResponse.ts  ConfigUpdateParams.ts  DirectoryEntry.ts  ErrorFrame.ts  Event.ts  FsBrowseParams.ts  FsBrowseResponse.ts  FsListWorkspaceParams.ts  FsListWorkspaceResponse.ts  FsVerifyPathParams.ts  FsVerifyPathResponse.ts  McpServerConnectParams.ts  McpServerCreateParams.ts  McpServerDeleteParams.ts  McpServerDetail.ts  McpServerDisconnectParams.ts  McpServerGetParams.ts  McpServerGetResponse.ts  McpServerInfo.ts  McpServerListParams.ts  McpServerListResponse.ts  McpServerUpdateParams.ts  Method.ts  NegotiatedVersion.ts  NotificationFrame.ts  ProtocolErrorData.ts  ProtocolVersion.ts  RequestFrame.ts  ResponseFrame.ts  SessionDeleteParams.ts  (+30 more)
crates/opendev-protocol/src/: envelope.rs  events.rs  experimental.rs  lib.rs  methods.rs  transport.rs  transport_tui.rs  transport_web.rs  transport_workspace.rs  version.rs
crates/opendev-protocol/src/v1/: approval.rs  config.rs  error.rs  fs.rs  mcp.rs  mod.rs  session.rs  skill.rs  tool.rs  turn.rs  workspace.rs
crates/opendev-protocol/src/v2/: mod.rs
crates/opendev-protocol/tests/: versioning.rs  wire_compat.rs
crates/opendev-secrets/: Cargo.toml
crates/opendev-secrets/src/: audit.rs  doctor.rs  error.rs  key.rs  lib.rs  migration.rs  provider.rs  resolver.rs  rotate.rs  store.rs  value.rs
crates/opendev-secrets/src/backends/: env.rs  file.rs  keyring.rs  mod.rs
crates/opendev-telemetry/: Cargo.toml
crates/opendev-telemetry/src/: config.rs  error.rs  guard.rs  lib.rs  metrics.rs  trace_context.rs
crates/opendev-telemetry/src/layers/: file.rs  mod.rs  otlp.rs  panic.rs  redact.rs  sentry.rs
crates/opendev-workflow/: Cargo.toml
crates/opendev-workflow/src/: barrier.rs  lib.rs  loops.rs  pipeline.rs  types.rs
docs/: AUDIT_REPORT.md  PROJECT_STATUS.md  README.md  REMEDIATION_PLAN.md  constitution.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  server.rs
src-tauri/src/application/: chat_service.rs  config_service.rs  file_service.rs  mcp_service.rs  mod.rs  session_service.rs  skill_service.rs  system_service.rs  workflow_service.rs
src-tauri/src/interface/: mod.rs  services.rs
src-tauri/src/interface/desktop/: mod.rs  platform.rs
src-tauri/src/interface/desktop/commands/: chat.rs  config.rs  files.rs  mcp.rs  mod.rs  session.rs  skills.rs  workflow.rs
src-tauri/src/interface/desktop/contract/: chat.rs  config.rs  files.rs  mcp.rs  mod.rs  session.rs  skills.rs  workflow.rs
src-tauri/src/interface/desktop/events/: mod.rs
(+756 files in other folders)
