[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/opendev-models",
    "crates/opendev-config",
    "crates/opendev-http",
    "crates/opendev-context",
    "crates/opendev-history",
    "crates/opendev-tools-core",
    "crates/opendev-tools-impl",
    "crates/opendev-tools-lsp",
    "crates/opendev-tools-symbol",
    "crates/opendev-agents",
    "crates/opendev-web",
    "crates/opendev-repl",
    "crates/opendev-cli",
    "crates/opendev-mcp",
    "crates/opendev-channels",
    "crates/opendev-tui",
    "crates/opendev-runtime",
    "crates/opendev-hooks",
    "crates/opendev-plugins",
    "crates/opendev-sandbox",
    "crates/opendev-memory",
    "crates/opendev-observability",
    "crates/opendev-workflow",
]

[workspace.package]
version = "0.1.8"
edition = "2024"
license = "MIT"
repository = "https://github.com/opendev-to/opendev"
rust-version = "1.94"

[profile.release]
strip = true
lto = "thin"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
strum = { version = "0.28", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.13", features = ["json", "rustls", "stream"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures = "0.3"
http-body-util = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# System
libc = "0.2"

# Regex
regex = "1"

# File system
ignore = "0.4"
glob = "0.3"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
unicode-width = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }
dirs-next = "2"

# TypeScript type generation
ts-rs = { version = "10", features = ["serde-json-impl", "chrono-impl"] }

# Testing
tempfile = "3"

# Internal crates
opendev-models = { version = "0.1.6", path = "crates/opendev-models" }
opendev-config = { version = "0.1.6", path = "crates/opendev-config" }
opendev-http = { version = "0.1.6", path = "crates/opendev-http" }
opendev-context = { version = "0.1.6", path = "crates/opendev-context" }
opendev-history = { version = "0.1.6", path = "crates/opendev-history" }
opendev-tools-core = { version = "0.1.6", path = "crates/opendev-tools-core" }
opendev-tools-impl = { version = "0.1.6", path = "crates/opendev-tools-impl" }
opendev-tools-lsp = { version = "0.1.6", path = "crates/opendev-tools-lsp" }
opendev-tools-symbol = { version = "0.1.6", path = "crates/opendev-tools-symbol" }
opendev-agents = { version = "0.1.6", path = "crates/opendev-agents" }
opendev-web = { version = "0.1.6", path = "crates/opendev-web" }
opendev-mcp = { version = "0.1.6", path = "crates/opendev-mcp" }
opendev-channels = { version = "0.1.6", path = "crates/opendev-channels" }
opendev-tui = { version = "0.1.6", path = "crates/opendev-tui" }
opendev-repl = { version = "0.1.6", path = "crates/opendev-repl" }
opendev-cli = { version = "0.1.6", path = "crates/opendev-cli" }
opendev-runtime = { version = "0.1.6", path = "crates/opendev-runtime" }
opendev-hooks = { version = "0.1.6", path = "crates/opendev-hooks" }
opendev-plugins = { version = "0.1.6", path = "crates/opendev-plugins" }
opendev-sandbox = { version = "0.1.6", path = "crates/opendev-sandbox" }
opendev-memory = { version = "0.1.6", path = "crates/opendev-memory" }
opendev-observability = { version = "0.1.6", path = "crates/opendev-observability" }
opendev-workflow = { version = "0.1.6", path = "crates/opendev-workflow" }
url = "2"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
sha2 = "0.10"
hex = "0.4"

# Observability
tracing-appender = "0.2"
