[package]
name = "opendev-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-platform sandbox execution layer — Landlock, Seatbelt, bwrap, Windows Job Objects"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["process", "sync"] }
async-trait = { workspace = true }
libc = { workspace = true }
regex = { workspace = true }
url = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
