[package]
name = "opendev-http"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP client, authentication, and provider adapters for OpenDev"

[dependencies]
opendev-models = { workspace = true }
opendev-config = { workspace = true }
opendev-secrets = { workspace = true }
opendev-telemetry = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
dirs = "5"
fastrand = "2"
httpdate = "1"
sha2 = { workspace = true }
hmac = "0.12"
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
