[package]
name = "opendev-mcp"
description = "MCP (Model Context Protocol) client for OpenDev"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
opendev-models = { workspace = true }
opendev-config = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
opendev-exec = { workspace = true }
secrecy = { version = "0.10", features = ["serde"] }
sha2 = { workspace = true }
rand = "0.8"
base64 = "0.22"
chrono = { workspace = true }
url = { workspace = true }
open = "5"
tokio-tungstenite = "0.24"
http = "1"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
