[package]
name = "opendev-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Memory system: short-term, long-term, FTS5 SQLite persistence, decay scoring"

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
