[package]
name = "opendev-models"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core data models for OpenDev"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true }
opendev-secrets = { workspace = true }
secrecy = { version = "0.10", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
