[package]
name = "opendev-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Workflow execution engine: pipeline, barrier, sequential modes with loop patterns"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
